@@ -643,6 +643,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Fix explicit s-maxage=0 on raw pages; should help with proxy issues in
   generated stylesheets... hopefully...
 * (bug 4685) More fixes for Slovenian project namespace
+* Fix --report interval option for dumpTextPass
 
 
 === Caveats ===
